# mcp-workbench

./: .gitignore  README.md  conftest.py  main.py  mcp_workbench_prd.md  pyproject.toml  run_tests.py  setup.py  start_mock_server.py
.cursor/rules/: mcp-workbench.mdc
.github/workflows/: test.yml
mcp/: __init__.py  cli.py  client.py  mock_server.py  protocol.py  pytest_plugin.py  spec_registry.py  version_manager.py
mcp/protocol/: __init__.py  schema.py
mock_server/: server.py
reports/: summary.json
specs/2024-11-05/: prompts_requirements.txt  resources_requirements.txt  server.txt  tools_requirements.txt  utilities_requirements.txt
tests/: __init__.py  _meta.py  conftest.py  test_completion.py  test_completion_prompt.py  test_injection_protection.py  test_jsonrpc_errors.py  test_prompts_fuzzing.py  test_prompts_get.py  test_prompts_list.py  test_prompts_list_changed.py  test_resources_list.py  test_resources_list_changed.py  test_resources_read.py  test_resources_read_errors.py  test_resources_smoke.py  test_resources_subscribe.py  test_resources_templates.py  test_spec_version.py  test_tools_call.py  test_tools_call_errors.py  test_tools_completion_smoke.py  test_tools_fuzzing.py  test_tools_list.py  test_tools_list_changed.py
