[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-workbench"
version = "0.1.0"
description = "A testing workbench for MCP (Model Control Protocol) implementations"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
dependencies = [
    "pytest>=7.0.0",
    "httpx>=0.22.0",
    "pydantic>=2.0.0",
    "flask>=2.0.0",
]

[project.scripts]
mcp-check = "mcp.cli:main"

[project.optional-dependencies]
dev = [
    "black",
    "isort",
    "mypy",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
# Register the pytest plugin to allow --mock-server flag
addopts = "--import-mode=importlib"
pythonpath = ["."]

[tool.setuptools]
# Using packages.find instead of direct packages list
# packages = ["mcp", "tests"]

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
"mcp" = ["resources/**/*"]

[pytest.plugins]
mcp = "mcp.pytest_plugin"
